assets/css/style.css
* {
    box-sizing: border-box;
}

:root {
    --primary-color: #0F1B4C;
}

html {
    font-size: 62.5%;
}

body {
    font-size: 1.6rem;
    font-family: 'Poppins', sans-serif;
}

/* Common -> class dùng chung */
a {
    text-decoration: none;
}

.center {
    display: flex;
    align-items: center;
    justify-content: center;
}

.content {
    width: 1110px;
    max-width: calc(100% - 48px);
    margin-left: auto;
    margin-right: auto;
}

.btn {
    display: inline-block;
    background: var(--primary-color);
    border-radius: 12px;
    min-width: 98px;
    font-weight: 500;
    font-size: 1.4rem;
    text-align: center;
    color: #ffffff;
    padding: 18px 16px;
}

.btn:hover {
    opacity: 0.9;
}

.line-clamp {
    display: -webkit-box;
    -webkit-line-clamp: var(--line-clamp, 2);
    -webkit-box-orient: vertical;
    overflow: hidden;
}

/* để làm dấu 3 chấm nếu từ quá dài, luôn luôn thêm 3 dòng trên  */
/* -webkit-line-clamp: var(--line-clamp, 2); đặt biến ngắt dòng, mặc định là 2 dòng, nếu là 3, thay đổi: --line-clamp:3 ở selector cần; chú ý: nhớ thêm line-clamp ở class html */

/* ======Header====== */
.fixed-header {
    background: #E6F0FF;
    padding-top: 26px;
    position: sticky;
    top: -26px;
    z-index: 1;
}

.hero-wrap {
    background: #E6F0FF;
    height: calc(100vh - 90px);
    position: relative;
    display: flex;
    flex-direction: column;
    height: calc(100vh - 90px);
}

.navbar {
    display: flex;
    align-items: center;
    padding-top: 38px;
    padding: 12px 0;
}

.navbar ul {
    display: flex;
    margin-left: 50px;
}

.navbar .actions {
    margin-left: auto;
}

.navbar ul a {
    font-weight: 500;
    font-size: 1.4rem;
    color: #4F5361;
    padding: 8px 14px;
}

.navbar ul a:hover {
    text-decoration: underline;
}

.navbar .action-link {
    font-weight: 500;
    font-size: 1.4rem;
    color: var(--primary-color);
}

.navbar .action-btn {
    padding: 13px 16px;
    margin-left: 18px;
    border-radius: 8px;
}

/* =====Hero===== */
.hero {
    margin-top: 130px;
}

.hero .info {
    width: 51%;
}

.hero .sub-title {
    font-weight: 500;
    font-size: 1.8rem;
    line-height: 1.5;
    letter-spacing: 0.01em;
    /* em phụ thuộc font-size của chính nó  */
    color: #687690;

}

.hero .title {
    margin-top: 8px;
    font-weight: 700;
    font-size: 6.2rem;
    line-height: 1.2;
    color: #000336;
}

.hero .desc {
    margin-top: 30px;
    font-weight: 400;
    font-size: 1.8rem;
    line-height: 1.78;
    color: #5A6473;
}

.hero-cta {
    margin-top: 40px;
    min-width: 170px;
}

.hero-img {
    position: absolute;
    bottom: 0;
    right: calc((100vw - 1110px) / 2 - 100px);
}

/* =====Clients===== */
.clients {
    margin-top: 79px;
    padding: 43px 0 64px;
}

.clients .row {
    display: flex;
    justify-content: space-between;
}

.clients .desc {
    font-weight: 500;
    font-size: 1.6rem;
    line-height: 1.5;
    color: #7D8589;
}

.clients .row-desc {
    margin-top: 23px;
}

.clients .images {
    margin-top: 70px;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.clients .images a {
    height: 90px;
    display: flex;
    align-items: center;
    padding: 0 42px;
    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
    border-radius: 12px;

}

/* =====Guides===== */
.guides {
    margin-top: 40px;
    padding: 93px 0 79px;
}

.guides .sub-title {
    position: relative;
    font-weight: 600;
    font-size: 3.5rem;
    line-height: 1;
    text-align: center;
    color: #000339;
}

.guides .sub-title::before {
    position: absolute;
    display: inline-block;
    top: -10px;
    left: 50%;
    /* Chạy 50% thẻ cha  */
    transform: translateX(-50%);
    /* 50% kích thước của nó  */
    content: "";
    width: 41px;
    height: 4px;
    background: #000339;
    border-radius: 12px;
}


.guides .desc {
    width: 459px;
    max-width: 100%;
    margin: 20px auto 0;
    font-weight: 400;
    font-size: 1.6rem;
    line-height: 1.88;
    text-align: center;
    color: #5a6473;
}

.list-guide {
    display: flex;
    justify-content: center;
    margin-top: 70px;
}


.guide-item {
    margin: 0 70px;
    text-align: center;
}

.guide-item .title {
    margin-top: 26px;
    font-weight: 500;
    font-size: 2rem;
    line-height: 1.1;
    color: #3B3C45;
}

.guide-item .link {
    margin-top: 10px;
    display: inline-block;
    font-weight: 600;
    font-size: 1.4rem;
    color: #0689FF;
}

.guide-item .arrow {
    margin-left: 6px;
}

/* guide cta */
.guide-cta {
    display: flex;
    justify-content: center;
    margin-top: 50px;
}

.guide-cta .btn {
    min-width: 170px;
}

/* =====Featured===== */
.featured {
    margin-top: 41px;
    background: #F5FAFE;
}

.featured .content {
    padding: 110px 0;
}

.featured .sub-title {
    font-weight: 600;
    font-size: 3.5rem;
    line-height: 1;
    color: #000339;
}

.featured .row {
    margin-top: 20px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.featured .desc {
    font-weight: 400;
    font-size: 1.6rem;
    line-height: 1.88;
    color: #5A6473;
}

.featured .link {
    display: flex;
    align-items: center;
    font-weight: 600;
    font-size: 1.8rem;
    color: #0689FF;
}

.featured .link .arrow {
    margin-left: 8px;
}

/* Featured list */
.featured .list {
    margin-top: 70px;
    display: flex;
    gap: 30px;
    /* Khoảng cách giữa thẻ con là 30px */
}

.featured .item {
    flex: 1;
    /* flex:1 chia đều thẻ con có chiều ngang bằng nhau áp dụng khi thẻ cha có display: flex */
    background: #fff;
    border-radius: 12px;
    /* overflow: hidden; có thể dùng cách này nếu thẻ ảnh bên trong không được bo tròn */
}

.featured .item .thumb {
    width: 100%;
    height: 227px;
    object-fit: cover;
    border-top-left-radius: 12px;
    border-top-right-radius: 12px;
}

.featured .item .body {
    padding: 17px 20px 24px;
}

.featured .item .title a {
    font-weight: 600;
    font-size: 2rem;
    line-height: 1.5;
    color: #000339;

}

.featured .item .desc {
    --line-clamp: 2;
    margin-top: 11px;
    font-weight: 500;
    font-size: 1.4rem;
    line-height: 1.5;
    color: #A3A6AB;
    word-break: break-all;
    /* word-break: break-all; bẻ dòng khi vượt quá thẻ, tránh vỡ giao diện */
}

.featured .item .info {
    display: flex;
    align-items: center;
    margin-top: 21px;
}

.featured .item .label {
    margin-left: 8px;
    font-weight: 500;
    font-size: 1.4rem;
    text-align: center;
    letter-spacing: 0.01em;
    color: #4D4D52;
}

.featured .item .icon:first-child {
    margin-left: 0;
}

.featured .item .icon {
    margin-left: 20px;
}

/* ===== Stats===== */
.stats {
    margin-top: 75px;
    padding: 50px 0;
}

.stats .content {
    width: 1048px;
}

.stats .row {
    display: flex;
}

.stats .img-block,
.stats .info {
    width: 50%;
}

.stats .info {
    padding: 79px 0 0 165px;
}

.stats .img-block {
    position: relative;
}

.stats .img-block .stats-trend {
    position: absolute;
    top: 0;
    left: 0;
    width: 239px;
    padding: 45px 22px 40px;
    background: #FFFFFF;
    border-radius: 0px 0px 12px 12px;
}

.stats-trend .value {
    font-weight: 700;
    font-size: 2.6rem;
    letter-spacing: 0.01em;
    color: #000339;
}

.stats-trend .icon {
    margin-left: auto;
}

.stats-trend .desc {
    margin-top: 8px;
    font-weight: 400;
    font-size: 1.2rem;
    line-height: 1.5;
    color: #A7A7A7;
}

.stats-trend .separate {
    height: 1.2px;
    margin-top: 25px;
    background: #E9E9E9;
}

.stats .avatar-block {
    margin-top: 26px;
    display: flex;
    flex-wrap: wrap;
    gap: 16px 14px;
}

.stats .avatar-group {
    display: flex;
}

.stats .avatar {
    width: 16px;
    height: 16px;
    object-fit: cover;
    border-radius: 50%;
    margin-left: -3px;
    background: var(--bg-color, #fff);
    font-weight: 450;
    font-size: 0.7rem;
    text-align: center;
    letter-spacing: -0.02em;
    line-height: 16px;
    text-align: center;
    color: #FFFFFF;
}

.stats .avatar-1 {}

.stats .avatar:first-child {
    margin-left: 0;
}

.stats .img-block .image {
    display: block;
    margin-left: auto;
    width: 400px;
    height: 460px;
    object-fit: cover;
    border-radius: 12px;
}

/* margin-left:auto sẽ bám biên phải nếu thẻ có thuộc tính display:block */


.stats .sub-title {
    font-weight: 600;
    font-size: 3.5rem;
    line-height: 1.29;
    color: #000339;
    width: 269px;
}

.stats .sub-title::before {
    position: relative;
    top: -10px;
    left: 0;
    content: "";
    display: block;
    width: 41px;
    height: 4px;
    background: #000339;
    border-radius: 12px;

}

.stats .info .desc {
    margin-top: 20px;
    font-weight: 400;
    font-size: 1.6rem;
    line-height: 1.88;
    color: #5A6473;
    width: 309px;
}

.stats .row-qty {
    margin-top: 110px;
    justify-content: space-between;
    padding: 0 32px;
}

.stats .qty {
    font-weight: 600;
    font-size: 6.4rem;
    color: #000000;
}

.stats .qty-desc {
    margin-top: 20px;
    font-weight: 500;
    font-size: 1.8rem;
    line-height: 1.5;
    color: #7B8087;
}

/* Subscription */
.subscription {
    margin-top: 90px;
}

.subscription .body {
    display: flex;
    align-items: center;
    background: #063183;
    border-radius: 20px;
    position: relative;
    height: 370px;
}

.subscription .info {
    padding: 0 80px;
    width: 671px;
    max-width: 100%;
}

.subscription .sub-title {
    font-weight: 600;
    font-size: 3.5rem;
    color: #FFFFFF;
}

.subscription .desc {
    --line-clamp: 3;
    font-weight: 400;
    font-size: 1.6rem;
    line-height: 1.88;
    color: #FFFFFF;
    opacity: 0.75;
    margin-top: 15px;
}

.subscription .btn {
    min-width: 151px;
    color: #002366;
    background: #fff;
    margin-top: 20px;
}

.subscription .image {
    position: absolute;
    bottom: 0;
    right: 221px;
}

/* footer */
footer {
    margin-top: 35px;
    padding: 50px 0 58px;
}

.footer .row {
    display: flex;

}

.footer .row-top {
    gap: 185px;
}

.footer .heading {
    font-family: 'Lato', sans-serif;
    font-weight: 700;
    font-size: 2rem;
    color: #1C1C1D;
}

.footer .list,
.desc {
    margin-top: 42px;
}

.footer .item {
    margin-top: 18px;
}

.footer .item a,
.footer .desc {
    font-weight: 400;
    font-size: 1.6rem;
    color: #7A7A7E;
    white-space: nowrap;
}

.footer .desc {
    white-space: normal;
    line-height: 1.75;
}

.footer .social {
    margin-top: 20px;
    display: flex;
}

.footer .social-link {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 28px;
    height: 28px;
    border-radius: 3px;
    background-color: #f9f9f9;
}

.footer .social-link+.social-link {
    margin-left: 16px;
}

.footer .social-link:hover {
    background-color: #ccc;
    border-radius: 3px;
}

.footer .row-bottom {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-top: 81px;
}

.footer .copyright {
    font-weight: 400;
    font-size: 1.4rem;
    line-height: 1.5;
    color: #C2C2C2;
}

